--- a/uni_tasks/templates/uni_tasks_app/main.html
+++ b/uni_tasks/templates/uni_tasks_app/main.html
@@ -1,48 +1,26 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'uni_tasks_app/base.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap" rel="stylesheet">
-    <title>Главная страница</title>
-</head>
+{% block page_title %}
+    Главная страница
+{% endblock %}
 
-<body>
-    <header>
-        <nav class="logo-nav">
-            <img class="header-logo" src="{% static 'media/logo.png' %}" alt="Logo">
-        </nav>
-        <nav class="header-info">
-            <h2 class="header-title">$$$ website?</h2>
-            <h3 class="header-task">Главная страница</h3>
-        </nav>
-    </header>
+{% block header_title %}
+    Главная страница
+{% endblock %}
 
-    <aside>
-        <nav class="aside-link">
-            <a href="{% url 'jquery_test' %}">Тест Jquery</a>
-        </nav>
-    </aside>
+{% block aside %}
+    <nav class="aside-link">
+        <a href="{% url 'jquery_test' %}">Тест Jquery</a>
+    </nav>
+{% endblock %}
 
-    <main>
-        <div class="tasks">
-            <h1>Список заданий:</h1>
-            <div class="tasks-list">
-                {% for i in numbers %}
-                    <a class="link-to-task" href="{% url 'task' i  %}">Задание {{ i }}</a>
-                {% endfor %}
-            </div>
+{% block content %}
+    <div class="tasks">
+        <h1>Список заданий:</h1>
+        <div class="tasks-list">
+            {% for i in numbers %}
+                <a class="link-to-task" href="{% url 'task' i %}">Задание {{ i }}</a>
+            {% endfor %}
         </div>
-    </main>
-
-    <footer>
-        <p class="text_in_footer">created by</p>
-        <h3 class="text_in_footer">Денис Чупилко</h3>
-    </footer>
-</body>
-
-</html>
+    </div>
+{% endblock %}
