--- a/uni_tasks/templates/uni_tasks_app/task8.html
+++ b/uni_tasks/templates/uni_tasks_app/task8.html
@@ -1,103 +1,78 @@
-{% load static %}
-<!DOCTYPE html>
-<html lang="en">
+{% extends 'uni_tasks_app/base_task.html' %}
 
-<head>
-    <meta charset="UTF-8">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/style.css' %}">
+{% load static %}
+
+{% block extra_links %}
     <link rel="stylesheet" type="text/css" href="{% static 'css/task8.css' %}">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;200;300;400;500;600;700;800&display=swap"
-          rel="stylesheet">
     <script src="{% static 'js/jquery.js' %}" defer></script>
     <script src="{% static 'js/task8.js' %}" defer></script>
-    <title>Задание 8</title>
-</head>
+{% endblock %}
 
-<body id="body">
+{% block page_title %}
+    Задание 8
+{% endblock %}
 
-<div id="no-pop-up">
-    <header>
-        <nav class="header-logo">
-            <img class="header-logo" src="{% static 'media/logo.png' %}" alt="Logo">
-        </nav>
-        <nav class="header-info">
-            <h2 class="black header-title">$$$ website?</h2>
-            <h3 class="black header-task">Задание 8</h3>
-        </nav>
-    </header>
+{% block header_title %}
+    Задание 8
+{% endblock %}
 
-    <aside>
-        <nav class="aside-link">
-            <a href="{% url 'main' %}"  class="black">Главная страница</a>
-        </nav>
-    </aside>
+{% block extra_body %}
+    <div id="pop-up">
+        <form id="form-back"
+              class="formcarryForm"
+              action="https://formcarry.com/s/3tEO8VQIzT"
+              enctype="multipart/form-data">
+            <div id="close-pop-up">
+                <p id="for-x">X</p>
+            </div>
+            <h1 id="h1-form" class="black">Форма</h1>
 
-    <main id="main">
-        <div id="to-pop-up">
-            <h1 class="black center-text">Нажмите кнопку, если хотите заполнить форму</h1>
-            <img id="img-dog" src="{% static 'media/dog-with-butterfly.jpg' %}" alt="Собака с бабочкой">
-            <div class="div_button" id="button-to-pop-up">Хочу заполнить форму</div>
-        </div>
-    </main>
+            <div id="if-error">
+                <p>Неправильный ввод номера телефона</p>
+            </div>
 
-    <footer>
-        <p class="black text_in_footer">created by</p>
-        <h3 class="black text_in_footer">Денис Чупилко</h3>
-    </footer>
-</div>
+            <div class="div-input">
+                <label id="for-fio" class="black label-center" for="fio">ФИО</label>
+                <input name="fio" class="size-input" id="fio" type="text" required>
+            </div>
 
-<div id="pop-up">
-    <form id="form-back"
-          class="formcarryForm"
-          action="https://formcarry.com/s/3tEO8VQIzT"
-          enctype="multipart/form-data">
-        <div id="close-pop-up">
-            <p id="for-x">X</p>
-        </div>
-        <h1 id="h1-form" class="black">Форма</h1>
+            <div class="div-input">
+                <label id="for-email" class="black label-center" for="email">Email</label>
+                <input name="email" class="size-input" id="email" type="email" required>
+            </div>
 
-        <div id="if-error">
-            <p>Неправильный ввод номера телефона</p>
-        </div>
+            <div class="div-input">
+                <label id="for-telephone" class="black label-center" for="telephone">Телефон</label>
+                <input name="telephone" class="size-input" id="telephone" type="tel" required>
+            </div>
 
-        <div class="div-input">
-            <label id="for-fio" class="black label-center" for="fio">ФИО</label>
-            <input name="fio" class="size-input" id="fio" type="text" required>
-        </div>
+            <div class="div-input">
+                <label id="for-organization" class="black label-center" for="organization">Организация</label>
+                <input name="organization" class="size-input" id="organization" type="text" required>
+            </div>
 
-        <div class="div-input">
-            <label id="for-email" class="black label-center" for="email">Email</label>
-            <input name="email" class="size-input" id="email" type="email" required>
-        </div>
+            <div class="div-input">
+                <label id="for-message" class="black label-center" for="message">Сообщение</label>
+                <textarea name="message" id="message" required></textarea>
+            </div>
 
-        <div class="div-input">
-            <label id="for-telephone" class="black label-center" for="telephone">Телефон</label>
-            <input name="telephone" class="size-input" id="telephone" type="tel" required>
-        </div>
+            <div>
+                <input id="checkbox" type="checkbox" required>
+                <label id="for-checkbox" class="black" for="checkbox">Согласие на обработку персональных данных</label>
+            </div>
 
-        <div class="div-input">
-            <label id="for-organization" class="black label-center" for="organization">Организация</label>
-            <input name="organization" class="size-input" id="organization" type="text" required>
-        </div>
+            <div id="div-with-submit">
+                <input id="submit-request" class="div_button" type="submit" value="Отправить данные">
+            </div>
+        </form>
+    </div>
 
-        <div class="div-input">
-            <label id="for-message" class="black label-center" for="message">Сообщение</label>
-            <textarea name="message" id="message" required></textarea>
-        </div>
+{% endblock %}
 
-        <div>
-            <input id="checkbox" type="checkbox" required>
-            <label id="for-checkbox" class="black" for="checkbox">Согласие на обработку персональных данных</label>
-        </div>
-
-        <div id="div-with-submit">
-            <input id="submit-request" class="div_button" type="submit" value="Отправить данные">
-        </div>
-    </form>
-</div>
-
-</body>
-
-</html>
+{% block content %}
+    <div id="to-pop-up">
+        <h1 class="black center-text">Нажмите кнопку, если хотите заполнить форму</h1>
+        <img id="img-dog" src="{% static 'media/dog-with-butterfly.jpg' %}" alt="Собака с бабочкой">
+        <div class="div_button" id="button-to-pop-up">Хочу заполнить форму</div>
+    </div>
+{% endblock %}
